# AETHEL

./: .env.example  .gitignore  AETHEL_AKTIONSPLAN.docx  AETHEL_ARCHITECTURE_V2.docx  AETHEL_GESAMTPLAN_V4.docx  AETHEL_IMPLEMENTIERUNGSPLAN_V3.docx  AETHEL_LUECKENANALYSE.docx  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
contracts/: Cargo.toml
contracts/src/: agent_lifecycle.rs  app_composition.rs  budget.rs  capability.rs  compliance.rs  compression.rs  decomposer.rs  error.rs  executor.rs  ids.rs  lib.rs  pipeline.rs  registry.rs  storage.rs  system.rs  transitions.rs  triplex_via.rs
engine/: Cargo.toml
engine/src/: agent_runner.rs  fimas_executor.rs  lib.rs  runtime.rs  task_queue.rs
integration-tests/: Cargo.toml
integration-tests/tests/: e2e.rs
storage/: Cargo.toml
storage/src/: lib.rs  migrations.rs  sqlite_claims.rs  sqlite_reports.rs  sqlite_traces.rs
tasks/: GIT-STRATEGY.md  P0-01-error-type.md  P0-02-newtype-ids.md  P0-03-claim-transitions.md  P0-04-budget-enforcement.md  P1-01-capability-trait.md  P1-02-pipeline.md  P1-03-registry.md  P1-04-executor.md  P2-01-fimas-decomposer.md  P2-02-thought-compression.md  P2-03-agent-lifecycle.md  README.md
