[package]
name = "aethel_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AETHEL API Server — REST endpoints for the AETHEL platform"

[[bin]]
name = "aethel-server"
path = "src/main.rs"

[dependencies]
aethel_contracts = { path = "../contracts" }
aethel_engine = { path = "../engine" }
aethel_storage = { path = "../storage" }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
