[package]
name = "aethel_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AETHEL CLI — Command-line interface for the AETHEL platform"

[[bin]]
name = "aethel"
path = "src/main.rs"

[dependencies]
aethel_contracts = { path = "../contracts" }
aethel_engine = { path = "../engine" }
aethel_storage = { path = "../storage" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
colored = "2"
