[package]
name = "aethel_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AETHEL Runtime Engine — Agent orchestration, FIMAS execution, and system runtime"

[dependencies]
aethel_contracts = { path = "../contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
