[package]
name = "aethel_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AETHEL Storage — SQLite-backed persistence for claims, traces, and agent reports"

[dependencies]
aethel_contracts = { path = "../contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
async-trait = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
